--- a/src/main/docker/Dockerfile.jvm
+++ b/src/main/docker/Dockerfile.jvm
@@ -76,12 +76,12 @@
 # - NO_PROXY: A comma separated lists of hosts, IP addresses or domains that can be
 #   accessed directly. (example: "foo.example.com,bar.example.com")
 #
-#######
-#FROM registry.access.redhat.com/ubi8/openjdk-17:1.16
-#
-#ENV LANGUAGE='en_US:en'
-#
-#
+###
+FROM registry.access.redhat.com/ubi8/openjdk-17:1.16
+
+ENV LANGUAGE='en_US:en'
+
+
 ## We make four distinct layers so if there are application changes the library layers can be re-used
 #COPY --chown=185 target/quarkus-app/lib/ /deployments/lib/
 #COPY --chown=185 target/quarkus-app/*.jar /deployments/
@@ -94,35 +94,4 @@
 #ENV JAVA_APP_JAR="/deployments/quarkus-run.jar"
 #
 #ENTRYPOINT [ "/opt/jboss/container/java/run/run-java.sh" ]
-
-
-# Use the official Quarkus base image
-FROM quay.io/quarkus/ubi-quarkus-native-image:23.1.0-java17 as build
-
-# Set the working directory
-WORKDIR /work
-
-# Copy the Maven settings.xml
-COPY .mvn/wrapper/maven-wrapper.jar .mvn/wrapper/maven-wrapper.properties /work/.mvn/wrapper/
-
-# Copy the POM file and resolve dependencies
-COPY pom.xml .
-RUN ./mvnw -B -q --offline verify clean
-
-# Copy the application source code
-COPY src src
-
-# Build the native executable
-RUN ./mvnw -Pnative clean package
-
-# Create a final image with the native executable
-FROM registry.access.redhat.com/ubi8/ubi-minimal:8.5
-
-COPY --from=build /work/target/*-runner /application
-
-# Set the HTTP port
-EXPOSE 8080
-
-# Define the command to run the application
-CMD ["./application", "-Dquarkus.http.host=0.0.0.0"]
-
+#
