--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 quarkus.datasource.db-kind=mysql
-quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3306/inventory
+quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3306/inventory?createDatabaseIfNotExist=true
 quarkus.datasource.username = root
 quarkus.datasource.password = root
 quarkus.datasource.jdbc.driver=com.mysql.cj.jdbc.Driver
 quarkus.hibernate-orm.database.generation = drop-and-create
 quarkus.hibernate-orm.log.sql=true
 #quarkus.hibernate-orm.dialect=org.hibernate.dialect.MySQL8Dialect
+
+
+#docker run --name mysql-5.6.35 -p 3306:3306  -e MYSQL_ROOT_PASSWORD=root -d mysql:5.6.35
